--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -1,5 +1,49 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+@font-face {
+  font-family: 'Pretendard';
+  src: local('Pretendard'),
+  url('fonts/Pretendard-Regular.woff2') format('woff2'),
+  url('fonts/Pretendard-Regular.woff') format('woff'),
+  url('fonts/Pretendard-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: local('Pretendard'),
+  url('fonts/Pretendard-Medium.woff2') format('woff2'),
+  url('fonts/Pretendard-Medium.woff') format('woff'),
+  url('fonts/Pretendard-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: local('Pretendard'),
+  url('fonts/Pretendard-SemiBold.woff2') format('woff2'),
+  url('fonts/Pretendard-SemiBold.woff') format('woff'),
+  url('fonts/Pretendard-SemiBold.otf') format('opentype');
+  font-weight: 600;
+  font-display: swap;
+}
 
+@font-face {
+  font-family: 'Pretendard';
+  src: local('Pretendard'),
+  url('fonts/Pretendard-ExtraBold.woff2') format('woff2'),
+  url('fonts/Pretendard-ExtraBold.woff') format('woff'),
+  url('fonts/Pretendard-ExtraBold.otf') format('opentype');
+  font-weight: 800;
+  font-display: swap;
+}
+* {
+  margin: 0;
+  font-size: 10px;
+  word-break: keep-all;
+  -webkit-tap-highlight-color: transparent;
+  transition: color, background-color 0.3s ease-in-out;
+  font-family: 'Pretendard', sans-serif;
+}
 /* Document
    ========================================================================== */
 
