feat: add white color

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,6 +9,7 @@ $main800: #116419;
 $main900: #0a390e;
 
 // Path: src/styles/colors.scss
+$white: #ffffff;
 $gray100: #f1f3f4;
 $gray200: #d4dade;
 $gray300: #b7c1c8;
