--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -40,6 +40,7 @@
   margin: 0;
   font-size: 10px;
   word-break: keep-all;
+  box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
   transition: color, background-color 0.3s ease-in-out;
   font-family: 'Pretendard', sans-serif;
@@ -53,6 +54,7 @@
  */
 
 html {
+  font-size: 10px;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
