--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,6 +1,7 @@
 @import "theme/colors";
 .safe-area-layout-container {
   position: relative;
+  background: $white;
   display: flex;
   flex: 1 0 auto;
   flex-direction: column;
