--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,7 +11,7 @@
   background: $white;
   z-index: 999;
 }
-.back-button {
+.back-button-container {
   position: absolute;
   top: 50%;
   left: 2rem;
@@ -19,13 +19,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.back-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 3.2rem;
   width: 3.2rem;
-  padding: 0.5rem;
-  color: $main700;
-  background-color: $main100;
+  background: transparent;
   border: none;
-  border-radius: 0.5rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
