[JMT-45] 검색 페이지 레이아웃 개발 (#12)

--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -2,27 +2,27 @@
 @font-face {
   font-family: 'Pretendard';
   src: local('Pretendard'),
-  url('fonts/Pretendard-Regular.woff2') format('woff2'),
-  url('fonts/Pretendard-Regular.woff') format('woff'),
-  url('fonts/Pretendard-Regular.otf') format('opentype');
+  url('/fonts/Pretendard-Regular.woff2') format('woff2'),
+  url('/fonts/Pretendard-Regular.woff') format('woff'),
+  url('/fonts/Pretendard-Regular.otf') format('opentype');
   font-weight: 400;
   font-display: swap;
 }
 @font-face {
   font-family: 'Pretendard';
   src: local('Pretendard'),
-  url('fonts/Pretendard-Medium.woff2') format('woff2'),
-  url('fonts/Pretendard-Medium.woff') format('woff'),
-  url('fonts/Pretendard-Medium.otf') format('opentype');
+  url('/fonts/Pretendard-Medium.woff2') format('woff2'),
+  url('/fonts/Pretendard-Medium.woff') format('woff'),
+  url('/fonts/Pretendard-Medium.otf') format('opentype');
   font-weight: 500;
   font-display: swap;
 }
 @font-face {
   font-family: 'Pretendard';
   src: local('Pretendard'),
-  url('fonts/Pretendard-SemiBold.woff2') format('woff2'),
-  url('fonts/Pretendard-SemiBold.woff') format('woff'),
-  url('fonts/Pretendard-SemiBold.otf') format('opentype');
+  url('/fonts/Pretendard-SemiBold.woff2') format('woff2'),
+  url('/fonts/Pretendard-SemiBold.woff') format('woff'),
+  url('/fonts/Pretendard-SemiBold.otf') format('opentype');
   font-weight: 600;
   font-display: swap;
 }
@@ -30,9 +30,9 @@
 @font-face {
   font-family: 'Pretendard';
   src: local('Pretendard'),
-  url('fonts/Pretendard-ExtraBold.woff2') format('woff2'),
-  url('fonts/Pretendard-ExtraBold.woff') format('woff'),
-  url('fonts/Pretendard-ExtraBold.otf') format('opentype');
+  url('/fonts/Pretendard-ExtraBold.woff2') format('woff2'),
+  url('/fonts/Pretendard-ExtraBold.woff') format('woff'),
+  url('/fonts/Pretendard-ExtraBold.otf') format('opentype');
   font-weight: 800;
   font-display: swap;
 }
@@ -40,6 +40,7 @@
   margin: 0;
   font-size: 10px;
   word-break: keep-all;
+  box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
   transition: color, background-color 0.3s ease-in-out;
   font-family: 'Pretendard', sans-serif;
@@ -53,6 +54,7 @@
  */
 
 html {
+  font-size: 10px;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
