chore: fix place detail page

--- a/src/styles/theme/fontStyles.scss
+++ b/src/styles/theme/fontStyles.scss
@@ -1,10 +1,10 @@
 @import "colors";
-$title-l: 3.2rem;
-$title-m: 2.4rem;
-$title-s: 2.0rem;
-$text-l: 1.6rem;
-$text-m: 1.4rem;
-$text-s: 1.2rem;
+$title-l: 32px;
+$title-m: 24px;
+$title-s: 20px;
+$text-l: 16px;
+$text-m: 14px;
+$text-s: 12px;
 
 $bold: 700;
 $medium: 500;
