--- a/src/components/search/PlaceInfoCard.scss
+++ b/src/components/search/PlaceInfoCard.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 0.4rem;
-  padding: 1.6rem 0;
+  gap: 4px;
+  padding: 16px 0;
   cursor: pointer;
 }
