--- a/src/styles/Input/input.scss
+++ b/src/styles/Input/input.scss
@@ -4,25 +4,25 @@
   display: flex;
   align-items: center;
   width: 100%;
-  border-radius: 0.8rem;
+  border-radius: 8px;
   background: $gray100;
 }
 .input-container {
   display: flex;
   align-items: center;
   width: 100%;
-  gap: 0.8rem;
+  gap: 8px;
 
 }
 
 
 .input-icon {
   position: absolute;
-  left: 1.2rem;
+  left: 12px;
   transform: translateY(-50%);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 1.8rem;
-  height: 1.8rem;
+  width: 18px;
+  height: 18px;
 }
