--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex: 1 0 auto;
   flex-direction: column;
-  padding: calc(4.8rem + env(safe-area-inset-top)) 0 env(safe-area-inset-bottom);
+  padding: calc(env(safe-area-inset-top)) 0 env(safe-area-inset-bottom);
 }
 .container-inner {
   flex: 1 0 auto;
@@ -13,12 +13,12 @@
   height: 100%;
   flex-direction: column;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0 20px;
 }
 .list-container {
   display: flex;
     flex-direction: column;
   width: 100%;
-  margin-top: 1.6rem;
-  gap: 0.4rem;
+  margin-top: 16px;
+  gap: 4px;
 }
