--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,7 +4,7 @@
   position: fixed;
   display: flex;
   top: 0;
-  height: 4.8rem;
+  height: 48px;
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -14,7 +14,7 @@
 .back-button-container {
   position: absolute;
   top: 50%;
-  left: 2rem;
+  left: 20px;
   transform: translate(0, -50%);
   display: flex;
   align-items: center;
@@ -24,8 +24,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 3.2rem;
-  width: 3.2rem;
+  height: 32px;
+  width: 32px;
   background: transparent;
   border: none;
   cursor: pointer;
