feat: add addressButton

--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -38,6 +38,7 @@
 }
 * {
   margin: 0;
+  font-size: 10px;
   word-break: keep-all;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
