--- a/src/pages/PlaceDetail.scss
+++ b/src/pages/PlaceDetail.scss
@@ -5,6 +5,12 @@
   flex-direction: column;
   padding: 0 20px;
 }
+.more-button {
+  display: flex;
+  justify-content: center;
+  padding: 7px 14px;
+}
+
 .imgs-box {
   width: 100%;
   height: 240px;
