feat: add search log

--- a/src/pages/Search.scss
+++ b/src/pages/Search.scss
@@ -3,3 +3,23 @@
   width: 100%;
   margin-top: 12px;
 }
+.search-log-menu {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin: 24px 0 12px 0;
+}
+.search-log-list {
+  display: flex;
+  width: 100%;
+  overflow-x: scroll;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+.search-log-list-wrapper {
+  margin: 0 20px;
+  display: flex;
+  width: 100%;
+  gap: 8px;
+}
