--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -213,6 +213,12 @@ textarea {
   margin: 0; /* 2 */
 }
 
+button {
+  border: 0;
+  background: transparent;
+}
+
+
 /**
    * Show the overflow in IE.
    * 1. Show the overflow in Edge.
