--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -18,6 +18,7 @@
 .list-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 100%;
   margin-top: 16px;
   gap: 4px;
