fix: change main color

--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,12 +1,13 @@
+
 $main100: #E9FBEB;
-$main200: #CFF7D3;
-$main300: #9beea3;
-$main400: #66e573;
-$main500: #32dc43;
-$main600: #20bc2f;
-$main700: #189024;
-$main800: #116419;
-$main900: #0a390e;
+$main200: #FFC6B2;
+$main300: #FF9F80;
+$main400: #FF794D;
+$main500: #FF531A;
+$main600: #E53900;
+$main700: #B22D00;
+$main800: #802000;
+$main900: #4D1300;
 
 // Path: src/styles/colors.scss
 $white: #ffffff;
