--- a/src/pages/PlaceDetail.scss
+++ b/src/pages/PlaceDetail.scss
@@ -1,9 +1,10 @@
 .detail-container {
   flex: 1 0 auto;
   display: flex;
-  height: 100%;
+  min-height: 100vh;
   flex-direction: column;
   padding: 0 20px;
+  scroll-behavior: smooth;
 }
 .more-button {
   display: flex;
