--- a/src/pages/PlaceDetail.scss
+++ b/src/pages/PlaceDetail.scss
@@ -1,7 +1,7 @@
 .detail-container {
   flex: 1 0 auto;
   display: flex;
-  min-height: 100vh;
+  min-height: 100%;
   flex-direction: column;
   padding: 0 20px;
   scroll-behavior: smooth;
@@ -46,12 +46,14 @@
   display: flex;
   flex-direction: row;
   margin-top: 4px;
-  font-family: 'Pretendard';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 150%;
   gap: 12px;
+  div {
+    font-family: 'Pretendard';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 150%;
+  }
   .gray {
     /* gray700 */
     color: #4d5c65;
