--- a/src/pages/Search.scss
+++ b/src/pages/Search.scss
@@ -13,9 +13,11 @@
   display: flex;
   width: 100%;
   overflow-x: scroll;
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.search-log-list::-webkit-scrollbar {
+  display: none;
 }
 .search-log-list-wrapper {
   margin: 0 20px;
