--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,8 +24,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 32px;
-  width: 32px;
+  height: 2.4rem;
+  width: 2.4rem;
+  padding: 0;
+  margin-left: 2rem;
   background: transparent;
   border: none;
   cursor: pointer;
