--- a/src/styles/theme/typographies.scss
+++ b/src/styles/theme/typographies.scss
@@ -3,49 +3,73 @@
 .title-l-bold {
   font-size: $title-l;
   font-weight: $bold;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .title-m-bold {
   font-size: $title-m;
   font-weight: $bold;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .title-s-bold {
   font-size: $title-s;
   font-weight: $bold;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .text-l-bold {
   font-size: $text-l;
   font-weight: $bold;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .text-m-bold {
   font-size: $text-m;
   font-weight: $bold;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .text-s-bold {
   font-size: $text-s;
   font-weight: $bold;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .title-l-medium {
   font-size: $title-l;
   font-weight: $medium;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .title-m-medium {
   font-size: $title-m;
   font-weight: $medium;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .title-s-medium {
   font-size: $title-s;
   font-weight: $medium;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .text-l-medium {
   font-size: $text-l;
   font-weight: $medium;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .text-m-medium {
   font-size: $text-m;
   font-weight: $medium;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 .text-s-medium {
   font-size: $text-s;
   font-weight: $medium;
+  letter-spacing: -0.02em;
+  line-height: 150%;
 }
 
