--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -44,6 +44,12 @@
   -webkit-tap-highlight-color: transparent;
   transition: color, background-color 0.3s ease-in-out;
   font-family: 'Pretendard', sans-serif;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+
+}
+*::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
 }
 /* Document
    ========================================================================== */
