--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -5,15 +5,16 @@
   display: flex;
   flex: 1 0 auto;
   flex-direction: column;
-  padding: calc(env(safe-area-inset-top)) 0 env(safe-area-inset-bottom);
+  padding: calc(env(safe-area-inset-top)) 0 env(safe-area-inset-bottom) 0;
 }
 .container-inner {
-  flex: 1 0 auto;
+  flex: 1;
   display: flex;
   height: 100%;
   flex-direction: column;
   align-items: center;
   padding: 0 20px;
+  overflow: visible;
 }
 .list-container {
   display: flex;
