--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -5,3 +5,14 @@
   width: 100%;
   gap: 2rem;
 }
+.home-tab-container {
+  display: flex;
+  flex-direction: column;
+}
+.see-all-filter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  gap: 1.2rem;
+}
