--- a/src/pages/PlaceDetail.scss
+++ b/src/pages/PlaceDetail.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   padding: 0 20px;
   scroll-behavior: smooth;
+  position: relative;
 }
 .more-button {
   display: flex;
