Revert "[JMT] 무한 스크롤 로직 추가, bottom sheet 이슈 수정, style 파일 정리 (#25)"
This reverts commit 9a727fe6ca0427c57f3983122b6456cf21d5f6ee.

--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,7 +1,7 @@
-@use "../theme";
+@import "theme/colors";
 .safe-area-layout-container {
   position: relative;
-  background: theme.$white;
+  background: $white;
   display: flex;
   flex: 1 0 auto;
   flex-direction: column;
