--- a/src/styles/theme/typographies.scss
+++ b/src/styles/theme/typographies.scss
@@ -1,75 +1,74 @@
-@use "fontStyles";
-
+@import "fontStyles";
 
 .title-l-bold {
-  font-size: fontStyles.$title-l;
-  font-weight: fontStyles.$bold;
+  font-size: $title-l;
+  font-weight: $bold;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .title-m-bold {
-  font-size: fontStyles.$title-m;
-  font-weight: fontStyles.$bold;
+  font-size: $title-m;
+  font-weight: $bold;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .title-s-bold {
-  font-size: fontStyles.$title-s;
-  font-weight: fontStyles.$bold;
+  font-size: $title-s;
+  font-weight: $bold;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .text-l-bold {
-  font-size: fontStyles.$text-l;
-  font-weight: fontStyles.$bold;
+  font-size: $text-l;
+  font-weight: $bold;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .text-m-bold {
-  font-size: fontStyles.$text-m;
-  font-weight: fontStyles.$bold;
+  font-size: $text-m;
+  font-weight: $bold;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .text-s-bold {
-  font-size: fontStyles.$text-s;
-  font-weight: fontStyles.$bold;
+  font-size: $text-s;
+  font-weight: $bold;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .title-l-medium {
-  font-size: fontStyles.$title-l;
-  font-weight: fontStyles.$medium;
+  font-size: $title-l;
+  font-weight: $medium;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .title-m-medium {
-  font-size: fontStyles.$title-m;
-  font-weight: fontStyles.$medium;
+  font-size: $title-m;
+  font-weight: $medium;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .title-s-medium {
-  font-size: fontStyles.$title-s;
-  font-weight: fontStyles.$medium;
+  font-size: $title-s;
+  font-weight: $medium;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .text-l-medium {
-  font-size: fontStyles.$text-l;
-  font-weight: fontStyles.$medium;
+  font-size: $text-l;
+  font-weight: $medium;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .text-m-medium {
-  font-size: fontStyles.$text-m;
-  font-weight: fontStyles.$medium;
+  font-size: $text-m;
+  font-weight: $medium;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
 .text-s-medium {
-  font-size: fontStyles.$text-s;
-  font-weight: fontStyles.$medium;
+  font-size: $text-s;
+  font-weight: $medium;
   letter-spacing: -0.02em;
   line-height: 150%;
 }
