--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -19,6 +19,7 @@
   justify-content: flex-start;
   width: 100%;
   gap: 1.2rem;
+  margin-bottom: 1.6rem;
 }
 .filter-divider {
   background: theme.$gray200;
