chore: margin fix

--- a/src/styles/pages/OtherProfile.scss
+++ b/src/styles/pages/OtherProfile.scss
@@ -3,7 +3,7 @@
 }
 .user-info-container {
   display: flex;
-  margin: 24px 0px 24px 10px;
+  margin: 24px 0px;
   align-items: center;
 }
 .user-image {
