--- a/src/styles/common/container.scss
+++ b/src/styles/common/container.scss
@@ -7,7 +7,16 @@
   flex-direction: column;
   padding: calc(env(safe-area-inset-top)) 0 env(safe-area-inset-bottom) 0;
 }
+.layout-container {
+  position: relative;
+  height: 100%;
+  background: theme.$white;
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: column;
+}
 .container-inner {
+  position: relative;
   flex: 1;
   display: flex;
   height: 100%;
