--- a/src/styles/pages/PlaceDetail.scss
+++ b/src/styles/pages/PlaceDetail.scss
@@ -3,10 +3,10 @@
 .detail-container {
   flex: 1 0 auto;
   display: flex;
+  height: calc(100vh - 158px);
   min-height: 100%;
   flex-direction: column;
   padding: 0 20px;
-  scroll-behavior: smooth;
   position: relative;
 }
 .more-button {
