--- a/src/styles/common/container.scss
+++ b/src/styles/common/container.scss
@@ -23,7 +23,7 @@
   flex-direction: column;
   align-items: center;
   padding: 0 20px;
-  overflow: visible;
+  overflow: auto;
 }
 .list-container {
   display: flex;
