--- a/src/styles/pages/PlaceDetail.scss
+++ b/src/styles/pages/PlaceDetail.scss
@@ -3,16 +3,16 @@
 .detail-container {
   flex: 1 0 auto;
   display: flex;
+  height: calc(100vh - 158px);
   min-height: 100%;
   flex-direction: column;
   padding: 0 20px;
-  scroll-behavior: smooth;
   position: relative;
 }
 .more-button {
   display: flex;
   justify-content: center;
-  padding: 7px 14px;
+  margin-right: 15px;
 }
 
 .imgs-box {
