--- a/src/styles/common/container.scss
+++ b/src/styles/common/container.scss
@@ -3,6 +3,7 @@
   position: relative;
   background: theme.$white;
   display: flex;
+  height: 100%;
   flex: 1 0 auto;
   flex-direction: column;
   padding: calc(env(safe-area-inset-top)) 0 env(safe-area-inset-bottom) 0;
@@ -17,19 +18,29 @@
 }
 .container-inner {
   position: relative;
-  flex: 1;
   display: flex;
-  height: 100%;
+  flex: 1 0 auto;
   flex-direction: column;
   align-items: center;
   padding: 0 20px;
-  overflow: visible;
+  overflow: auto;
+}
+.container-inner-padding {
+  padding: 0 20px;
 }
 .list-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 100%;
+  height: 100%;
   margin-top: 16px;
   gap: 4px;
+}
+.list-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
