--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -10,6 +10,7 @@
 .home-tab-container {
   display: flex;
   width: 100%;
+  height: 100%;
   gap: 16px;
   flex-direction: column;
 }
@@ -32,6 +33,7 @@
 }
 .place-detail-section {
   display: flex;
+  height: 100%;
   flex-direction: column;
   justify-content: center;
   gap: 20px;
