--- a/src/styles/pages/PlaceDetail.scss
+++ b/src/styles/pages/PlaceDetail.scss
@@ -31,7 +31,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 30px;
+  min-height: 30px;
   left: 20px;
   width: 100%;
   letter-spacing: -0.02em;
