--- a/src/styles/pages/PlaceDetail.scss
+++ b/src/styles/pages/PlaceDetail.scss
@@ -3,8 +3,7 @@
 .detail-container {
   flex: 1 0 auto;
   display: flex;
-  height: calc(100vh - 158px);
-  min-height: 100%;
+  min-height: calc(100vh - 158px);
   flex-direction: column;
   padding: 0 20px;
   position: relative;
