--- a/src/styles/pages/Report.scss
+++ b/src/styles/pages/Report.scss
@@ -1,6 +1,6 @@
 @use '../theme';
 .report-container {
-  margin: 20px 20px 28px 20px;
+  margin: 20px 20px 15px 20px;
 }
 .report-text {
   color: theme.$gray700;
@@ -38,14 +38,34 @@
   height: 110px;
   width: 100%;
   padding: 12px 20px;
-  button {
-    display: flex;
-    width: 100%;
-    height: 62px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    background: theme.$main500;
-    //main200이 선택되기 전 색깔
+}
+.text-input {
+  span {
+    float: right;
+  }
+}
+
+button {
+  display: flex;
+  width: 100%;
+  height: 62px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background: theme.$main500;
+}
+button:disabled,
+button[disabled] {
+  background: theme.$main200;
+}
+.other-reason {
+  width: 100%;
+  height: 140px;
+  padding: 12px;
+  border-radius: 8px;
+  background: theme.$gray100;
+  border: none;
+  &:focus {
+    outline: none;
   }
 }
