--- a/src/styles/pages/Report.scss
+++ b/src/styles/pages/Report.scss
@@ -1,6 +1,6 @@
 @use '../theme';
 .report-container {
-  margin: 20px 20px 0px 20px;
+  margin: 20px 20px 15px 20px;
 }
 .report-text {
   color: theme.$gray700;
@@ -23,4 +23,41 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+}
+.report-explain {
+  color: theme.$gray500;
+  height: 105px;
+  background-color: theme.$gray100;
+  padding-top: 16px;
+  padding-left: 20px;
+}
+.report-subject {
+  position: sticky;
+  bottom: 0;
+  background-color: white;
+  height: 110px;
+  width: 100%;
+  padding: 12px 20px 36px 20px;
+}
+.text-input {
+  span {
+    float: right;
+  }
+}
+
+
+button:disabled,
+button[disabled] {
+  background: theme.$main200;
+}
+.other-reason {
+  width: 100%;
+  height: 140px;
+  padding: 12px;
+  border-radius: 8px;
+  background: theme.$gray100;
+  border: none;
+  &:focus {
+    outline: none;
+  }
 }
